<resources>
    <string name="app_name">Skoovy</string>

    <!-- Strings Related to Nexmo -->
    <string name="application_id">0cf5e4c6-5c3d-40ec-bec8-73d7f3e407a3</string>
    <string name="shared_secret">c54f6997d23b48c </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="choose_password">Choose a password</string>
    <string name="set_password">Set a password</string>
    <string name="password_at_least">Your password should be at least 8</string>
    <string name="characters">characters</string>
    <string name="reset_method_below">reset method below</string>
    <string name="email_reset">Email Reset</string>
    <string name="mobile_reset">Mobile Reset</string>
    <string name="title_activity_login">Sign in</string>
    <string name="start_screen_title">Discover Your World</string>
    <string name="first_last_name_screen_title">What\'s your name?</string>
    <string name="birthdate_screen_title">What\'s your birthday?</string>
    <string name="create_username_screen_title">Create a Username</string>
    <string name="whats_your_email_screen_title">What\'s your email?</string>
    <string name="whats_your_mobile_screen_title">What\'s your mobile</string>
    <string name="phone_number_screen_title">phone number?</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="verification_code_screen_title">Verification Code</string>
    <string name="select_your_country_code">Select your Country Code</string>
    <string name="login_screen_title">Log In</string>
    <string name="find_your_friends">Find your friends</string>
    <string name="connect_with_friends">Connect with friends already on skoovy.</string>
    <string name="default_country_code">US +1</string>

    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="next">next</string>
    <string name="send_sms">Send an SMS</string>
    <string name="cancel">CANCEL</string>
    <string name="back">Back Arrow Button</string>
    <string name="undo">Undo Text Button</string>
    <string name="flash">Flash Settings Button</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="shutter_button">Shutter Button</string>
    <string name="image_filters">Image Filters</string>
    <string name="image_layers">Image Layers</string>
    <string name="gallery_view">Gallery View</string>
    <string name="content_stories">Stories Button</string>
    <string name="content_chat">Chat Button</string>
    <string name="refresh_icon">Refresh Spinner</string>
    <string name="launch_camera">Launch Camera</string>
    <string name="back_to_start_screen">back to start screen</string>
    <string name="skoovy_beans">Skoovy Beans Characters</string>
    <string name="skip">SKIP</string>

    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="by_clicking_below">By clicking the button below, you agree to our</string>
    <string name="tos_and_pp"><a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></string>
    <string name="birthday">BIRTHDAY</string>
    <string name="your_username_allows">Your username allows friends to</string>
    <string name="add_you_on_skoovy">add you on skoovy.</string>
    <string name="or">or</string>
    <string name="mobile_instead">Sign up with a mobile number instead</string>
    <string name="email_instead">Sign up with email instead</string>
    <string name="mobile_phone_number">MOBILE PHONE NUMBER</string>
    <string name="we_wont_share">We won\'t share your mobile number</string>
    <string name="read_our_pp_to_learn_more">Read our <a href="#">Privacy Policy</a> to learn more.</string>
    <string name="learn_more_in_our_pp">Learn more in our <a href="#">Privacy Policy</a></string>
    <string name="email">EMAIL</string>
    <string name="need_to_send_verification_code">We need to send a verification code</string>
    <string name="to_complete">to complete your registration.</string>
    <string name="enter_code">ENTER CODE</string>
    <string name="username_or_email">USERNAME OR EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="password_help"><a href="#">Password help?</a></string>
    <string name="auth_failed">Authentication failed</string>
    <string name="verification_process">Starting verification process &#8230;</string>
    <string name="select_your_skoovy_avatar">Select your Skoovy Avatar</string>
    <string name="_215">×</string>
    <string name="zero">0</string>
    <string name="choose_an_avatar">Choose an Avatar</string>
    <string name="avatars_define">Avatars define you on the map</string>
    <string name="personality">by personality to ensure your privacy</string>
    <string name="kindly">You\'re email has been sent \na verification link.  \nIn order to finish registration,\nkindly confirm your email by selecting the link.</string>
    <string name="title_activity_maps">Map</string>

    <!--    <string-array name="avatar_images">
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
            <item>@drawable/c8</item>
        </string-array>-->
</resources>
