<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_whats_your_mobile_number"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="6dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.skoovy.android.whatsYourMobileNumber">


    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/backbutton"
        android:id="@+id/backToEmailButton"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/back" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/skoovylogo"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:text="@string/whats_your_mobile_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:text="@string/phone_number_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:layout_marginTop="-2dp" />

    <TextView
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView6"
        android:textSize="15sp"
        android:textColor="#FF7F00"/>

    <Button
        android:text="@string/email_instead"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="#FF7F00"
        android:gravity="center_horizontal"
        android:id="@+id/signUpWithEmailInsteadButton"
        android:textSize="15sp"
        android:backgroundTint="@android:color/transparent"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="false"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/mobile_phone_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:id="@+id/textView4"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="33dp"
            android:ems="10"
            android:id="@+id/countrycode"
            android:minWidth="80dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#FF7F00"
            android:textStyle="normal|bold"
            android:gravity="center_vertical|center_horizontal"
            android:focusable="false"
            android:background="@drawable/textlines"
            android:text="@string/default_country_code"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:paddingTop="5dp" />

        <EditText
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="14"
            android:ems="10"
            android:id="@+id/registerYourMobileNuber"
            android:minWidth="200dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#FF7F00"
            android:layout_toEndOf="@+id/countrycode"
            android:layout_marginStart="15dp"
            android:textStyle="normal|bold"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <ImageButton
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/close"
            android:id="@+id/undoButton1"
            android:layout_alignEnd="@+id/registerYourMobileNuber"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-20dp"
            android:contentDescription="@string/undo" />

    </RelativeLayout>

    <TextView
        android:text="@string/we_wont_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="-1dp" />

    <TextView
        android:text="@string/read_our_pp_to_learn_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColorLink="#1F1FFF"
        android:textSize="14sp"
        android:gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >



            <Button
                android:text="@string/next"
                android:layout_width="190dp"
                android:layout_height="42dp"
                android:background="@drawable/roundedgreybutton"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:id="@+id/signupButton"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

</LinearLayout>
