<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_is_registered"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="6dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.skoovy.android.userIsRegisteredActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/skoovylogo"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:text="@string/find_your_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/beans"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:id="@+id/beanCharacters"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/skoovy_beans" />





        <Button
            android:text="@string/back_to_start_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:background="@drawable/buttonwithshadow"
            android:layout_below="@+id/beanCharacters"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:text="@string/launch_camera"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:adjustViewBounds="true"
            android:background="@drawable/roundedwhitebuttonblackborder"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:id="@+id/button2" />

        <TextView
            android:text="@string/connect_with_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:gravity="center_horizontal"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/button1"
            android:layout_alignStart="@+id/button1" />

    </RelativeLayout>

</LinearLayout>

