<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="6dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.skoovy.android.signupActivity">


    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/backbutton"
        android:id="@+id/backButton"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/back" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/skoovylogo"
        android:id="@+id/imageButton"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_marginTop="0dp"
        android:text="@string/first_last_name_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        android:text="@string/first_name"
        android:textColor="#888888"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="257dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:backgroundTint="#888888"
            android:ems="10"
            android:inputType="textCapSentences"
            android:maxWidth="314dp"
            android:minWidth="280dp"
            android:textColor="#FF7F00"
            android:textSize="20sp" />


        <ImageButton
            android:id="@+id/undoButton1"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignEnd="@+id/firstName"
            android:layout_gravity="end"
            android:layout_marginEnd="-17dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/undo"
            android:src="@drawable/close" />

    </RelativeLayout>

    <TextView
        android:text="@string/last_name"
        android:layout_marginStart="11dp"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textColor="#888888"
        android:id="@+id/textView4"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp">
        <EditText
            android:layout_width="257dp"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/lastName"
            android:backgroundTint="#888888"
            android:minWidth="280dp"
            android:maxWidth="314dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="-5dp"
            android:inputType="textCapSentences"
            android:textColor="#FF7F00"
            android:textSize="20sp"
            android:layout_alignParentBottom="true" />

        <ImageButton
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/close"
            android:id="@+id/undoButton2"
            android:layout_alignEnd="@+id/lastName"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_marginEnd="-17dp"
            android:contentDescription="@string/undo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="26dp"

            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView10"
            android:layout_marginTop="11dp"
            android:text="@string/by_clicking_below"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/tos_and_pp"
            android:textColorLink="#1F1FFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundedgreybutton"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </RelativeLayout>

</LinearLayout>
