<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_signup_avatar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="3dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.skoovy.android.signupAvatar">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/backbutton"
        android:id="@+id/backButton"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:text="@string/choose_an_avatar" />


    <TextView
        android:text="@string/avatars_define"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/personality"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        android:id="@+id/slider"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="228dp">

        <Gallery
            android:id="@+id/gallery1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <ImageSwitcher
            android:id="@+id/imageSwitcher1"
            android:layout_below="@+id/gallery1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageSwitcher>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gallery1"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:text="@string/next"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:adjustViewBounds="true"
        android:background="@drawable/roundedorangebutton"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal" />


</LinearLayout>

