<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.skoovy.android.StartScreen">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="70dp"
        android:src="@drawable/skoovylogo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:text="@string/start_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/login"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:adjustViewBounds="true"
            android:id="@+id/loginButton"
            android:background="@drawable/roundedwhitebuttonblackborder"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="100dp"
            android:shadowRadius="0"/>

        <Button
            android:text="@string/sign_up"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:id="@+id/signupButton"
            android:background="@drawable/roundedorangebutton"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:baselineAlignBottom="false"
            android:layout_marginBottom="40dp" />


    </RelativeLayout>

</LinearLayout>